--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -55,7 +55,6 @@ antigen bundle redxtech/zsh-kitty
 antigen bundle rsync
 antigen bundle ruby
 antigen bundle ssh-agent
-antigen bundle yarn
 
 # Load order matters; must be last
 antigen bundle zdharma-continuum/fast-syntax-highlighting
@@ -78,16 +77,13 @@ eval "$(oh-my-posh init zsh --config ~/.config/catppuccin/oh-my-posh/catppuccin_
 
 eval $(thefuck --alias)
 
-{{if eq .chezmoi.os "Linux" }}
+{{ if eq .chezmoi.os "Linux" }}
 export KERL_CONFIGURE_OPTIONS="--disable-debug --disable-silent-rules --without-javac --enable-shared-zlib --enable-dynamic-ssl-lib --enable-hipe --enable-sctp --enable-smp-support --enable-threads --enable-kernel-poll --enable-wx --enable-darwin-64bit --with-ssl=/usr/local/Cellar/openssl/1.0.2p"
 export SSH_AUTH_SOCK=~/.1password/agent.sock
 
 export PYENV_ROOT="$HOME/.pyenv"
 [[ -d $PYENV_ROOT/bin ]] && export PATH="$PYENV_ROOT/bin:$PATH"
 eval "$(pyenv init -)"
-
-alias yadev='yarn add -D'
-unalias yad
 
 skip_global_compinit=1
 {{ else if eq .chezmoi.os "darwin" }}
@@ -97,7 +93,7 @@ export KERL_CONFIGURE_OPTIONS="--disabled-debug --without-javac --disable-hipe -
 export NODE_OPTIONS="--max-old-space-size=8192"
 export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
 
-{{end}}
+{{ end }}
 # enable autocomplete function
 source $(brew --prefix zsh-autocomplete)/share/zsh-autocomplete/zsh-autocomplete.plugin.zsh
 
@@ -228,6 +224,9 @@ alias docker='podman'
 
 # Podman Compose aliases
 alias pc='podman compose'
+
+# Yarn aliases
+source ~/.config/zsh/yarn.zsh
 
 # enable alias-finder
 zstyle ':omz:plugins:alias-finder' autoload yes # disabled by default
