Remove autoenv and use the zsh plugin dotenv due to conflict between autoenv and zoxide.

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -31,7 +31,6 @@ antigen use oh-my-zsh
 antigen bundle alias-finder
 antigen bundle aliases
 antigen bundle atuinsh/atuin@main
-antigen bundle autoenv
 antigen bundle brew
 antigen bundle bundler
 antigen bundle command-not-found
@@ -41,6 +40,7 @@ antigen bundle copybuffer
 antigen bundle copyfile
 antigen bundle copypath
 antigen bundle cp
+antigen bundle dotenv
 antigen bundle eza-zsh
 antigen bundle fzf
 antigen bundle gh
