Remove interactive aliases and add angular completions.

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -194,10 +194,6 @@ alias p='ps -f'
 alias sortnr='sort -n -r'
 alias unexport='unset'
 
-alias rm='rm -i'
-alias cp='cp -i'
-alias mv='mv -i'
-
 #read documents
 alias -s ps=gv
 alias -s dvi=xdvi
@@ -252,3 +248,8 @@ eval "$(zoxide init zsh)"
 
 # Enable vi mode
 bindkey -v
+
+
+
+# Load Angular CLI autocompletion.
+source <(ng completion script)
