Move iosevka term and change fzf sourcing and config file location.

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -11,7 +11,7 @@ eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
 export PATH="/opt/homebrew/bin:$PATH"
 {{ end }}
 # FZF setup
-source ~/.fzf.zsh
+source ~/.config/fzf/fzf.zsh
 
 # asdf setup
 source ~/.config/asdf/asdf_setup.zsh
