--- a/.chezmoiscripts/run_after_30-install-eza.sh.tmpl
+++ b/.chezmoiscripts/run_after_30-install-eza.sh.tmpl
@@ -7,19 +7,19 @@
 if [[ ! $(command -v eza) ]]; then
     header "Installing Eza"
 
-    {{-   if .chezmoi.osRelease | inList "Pop" "Ubuntu" "Debian" -}}
-    if [[ ! $(command -v gpg) ]]; then
-        sudo apt update
-        sudo apt install -y gpg
-    fi
+    {{- if or (eq .os "pop") (eq .os "ubuntu") (eq .os "debian") -}}
+      if [[ ! $(command -v gpg) ]]; then
+          sudo apt update
+          sudo apt install -y gpg
+      fi
 
-    sudo mkdir -p /etc/apt/keyrings
-    wget --hsts-file='{{ .xdgDataDir }}/wget-hsts' -qO- https://raw.githubusercontent.com/eza-community/eza/main/deb.asc | sudo gpg --dearmor -o /etc/apt/keyrings/gierens.gpg
-    echo "deb [signed-by=/etc/apt/keyrings/gierens.gpg] http://deb.gierens.de stable main" | sudo tee /etc/apt/sources.list.d/gierens.list
-    sudo chmod 644 /etc/apt/keyrings/gierens.gpg /etc/apt/sources.list.d/gierens.list
-    sudo apt update
-    sudo apt install -y eza
-    {{- else if eq .chezmoi.osRelease | inList "EndeavourOS" "Arch" -}}
+      sudo mkdir -p /etc/apt/keyrings
+      wget --hsts-file='{{ .xdgDataDir }}/wget-hsts' -qO- https://raw.githubusercontent.com/eza-community/eza/main/deb.asc | sudo gpg --dearmor -o /etc/apt/keyrings/gierens.gpg
+      echo "deb [signed-by=/etc/apt/keyrings/gierens.gpg] http://deb.gierens.de stable main" | sudo tee /etc/apt/sources.list.d/gierens.list
+      sudo chmod 644 /etc/apt/keyrings/gierens.gpg /etc/apt/sources.list.d/gierens.list
+      sudo apt update
+      sudo apt install -y eza
+    {{- else if or (eq .os "linux-endeavouros") (eq .os "linux-arch") -}}
     {{   end }}
 fi
 
