--- a/.chezmoiscripts/run_before_00-install-prerequisites.sh.tmpl
+++ b/.chezmoiscripts/run_before_00-install-prerequisites.sh.tmpl
@@ -47,7 +47,7 @@ for cmd in "${packages[@]}"; do
   fi
 done
 
-{{ if or (eq .chezmoi.osRelease "Pop") (eq .chezmoi.osRelease "Ubuntu") (eq .chezmoi.osRelease "Debian") -}}
+{{ if or (eq .os "linux-pop") (eq .os "linux-ubuntu") (eq .os "linux-debian") -}}
   # Install missing packages
   if ${install}; then
     header "Updating package list"
@@ -58,7 +58,7 @@ done
         sudo apt install -y "${pkg}"
     done
   fi
-{{ else if or (eq .chezmoi.osRelease "EndeavourOS") (eq .chezmoi.osRelease "Arch") -}}
+{{ else if or (eq .os "linux-endeavouros") (eq .os "linux-arch") -}}
   # Install missing packages
   if ${install}; then
     header "Updating package list"
