--- a/.chezmoiscripts/run_onchange_before_01-apt-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_01-apt-packages.sh.tmpl
@@ -26,7 +26,7 @@ packages=(
 )
 
 header "Installing packages with apt"
-sudo apt-get update
+sudo apt update
 
 for package in "${packages[@]}"; do
     if sudo dpkg-query -l | awk {'print $2'} | grep -E "^${package}$" &>/dev/null; then
@@ -34,7 +34,7 @@ for package in "${packages[@]}"; do
         continue
     fi
     if apt-cache search --names-only '^${package}$' | grep '${package}' &>/dev/null; then
-        sudo apt-get install -y --no-upgrade ${package}
+        sudo apt install -y --no-upgrade ${package}
     else
         warning "Package ${package} is not available in apt"
     fi
