Add aws completions.

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -225,5 +225,8 @@ export PATH="${HOME}/.bun/bin:$PATH"
 # Load Angular CLI autocompletion.
 source <(ng completion script)
 
+# AWS Completions
+source "${HOME}/.local/bin/aws_zsh_completer.sh"
+
 # Enable vi mode
 bindkey -v
