Remove duplicate kitty script and fix breaking scripts.

--- a/.chezmoiscripts/run_after_01-zsh.sh.tmpl
+++ b/.chezmoiscripts/run_after_01-zsh.sh.tmpl
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
-{{- if eq .chezmoi.os "linux" -}}
+{{ if eq .chezmoi.os "linux" }}
 
 {{ template "shared_script_utils.bash" . }}
 
