--- a/.chezmoiscripts/run_before_01-add-1password-key-and-repo.sh.tmpl
+++ b/.chezmoiscripts/run_before_01-add-1password-key-and-repo.sh.tmpl
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
-{{- if eq .chezmoi.os "linux" -}}
+{{ if eq .chezmoi.os "linux" }}
 
 {{ template "shared_script_utils.bash" . }}
 
