Fix aws completions for osx.

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -226,7 +226,7 @@ export PATH="${HOME}/.bun/bin:$PATH"
 source <(ng completion script)
 
 # AWS Completions
-source "${HOME}/.local/bin/aws_zsh_completer.sh"
+source "/usr/local/bin/aws_zsh_completer.sh"
 
 # Enable vi mode
 bindkey -v
