Fix scripts run in osx.

--- a/.chezmoiscripts/run_before_01-add-1password-key-and-repo.sh.tmpl
+++ b/.chezmoiscripts/run_before_01-add-1password-key-and-repo.sh.tmpl
@@ -1,8 +1,8 @@
 #!/usr/bin/env bash
 
-{{ if eq .chezmoi.os "linux" }}
-
 {{ template "shared_script_utils.bash" . }}
+
+{{ if eq .chezmoi.os "linux" }}
 
 header "Adding repos and gpg keys for apt packages"
 
@@ -22,6 +22,6 @@ fi
 
 success "Added 1ppassword repo and gpg key"
 
-{{- end }}
+{{ end }}
 
 _safeExit_
