--- a/.chezmoiscripts/run_before_00-install-prerequisites.sh.tmpl
+++ b/.chezmoiscripts/run_before_00-install-prerequisites.sh.tmpl
@@ -5,8 +5,12 @@
 {{ if or (eq .chezmoi.os "darwin") (eq .chezmoi.os "linux") }}
 if [[ ! $(command -v kitty) ]]; then
   header "😸 Installing Kitty terminal emulator"
+  {{ if .work_computer }}
+  curl -L https://sw.kovidgoyal.net/kitty/installer.sh | sh /dev/stdin dest=~/Applications/
+  {{ else }}
   curl -L https://sw.kovidgoyal.net/kitty/installer.sh | sh /dev/stdin
-  {{ if (eq .chezmoi.os "linux") }}
+  {{ end }}
+  {{ if eq .chezmoi.os "linux" }}
   sudo update-alternatives --install /usr/bin/x-terminal-emulator x-terminal-emulator $( which kitty) 10
   {{ end }}
 fi
