Update scripts for work_computer setup and remove ng from zshrc.

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -17,6 +17,7 @@
   is_ci_workflow = false
   os = "{{ $osid }}"
   personal_computer = {{ $personal_computer }}
+  work_computer = {{ $work_computer }}
   xdgConfigCache = "{{ .chezmoi.homeDir }}/.cache"
   xdgConfigDir = "{{ .chezmoi.homeDir }}/.config"
   xdgDataDir = "{{ .chezmoi.homeDir }}/.local/share"
