--- a/.chezmoiscripts/run_onchange_before_02-homebrew-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_02-homebrew-packages.sh.tmpl
@@ -109,7 +109,7 @@ for formula in ${formulae[@]}; do
     fi
 done
 
-{{ if not .is_ci_workflow }}
+{{ if not (or .is_ci_workflow .work_computer) }}
 for cask in ${casks[@]}; do
     if ! _inArray_ -i "${cask}" "${currently_installed_casks[@]}"; then
         brew install -q --cask ${cask}
