Update for work comp and fix zsh plugins that have been broken for too long.

--- a/dot_config/private_atuin/config.toml.tmpl
+++ b/dot_config/private_atuin/config.toml.tmpl
@@ -167,9 +167,17 @@ enter_accept = true
 #  "pnpm",
 #  "kubectl",
 #]
-#
+
+common_subcommands = [
+  "uv run",
+  "podman",
+  "git",
+  "brew",
+  "apt",
+]
+
 # Set commands that should be totally stripped and ignored from stats
-#common_prefix = ["sudo"]
+common_prefix = ["sudo"]
 
 [theme]
 name = "Catppuccin Macchiato"
