--- a/dot_config/kitty/nerd-font-symbols.conf.tmpl
+++ b/dot_config/kitty/nerd-font-symbols.conf.tmpl
@@ -1,6 +1,6 @@
 # Nerd Fonts v3.3.0
 {{ if eq .chezmoi.os "darwin" }}
-symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b7,U+e700-U+e8ef,U+1f5d5-U+ef3e,U+ed00-U+efc1,U+f000-U+f2ff,U+f000-U+f2e0,U+f300-U+f381,U+f400-U+f533,U+f0001-U+f1af0 Symbols Nerd Font Mono
+symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b7,U+e700-U+e8ef,U+ef3e,U+ed00-U+efc1,U+f000-U+f2ff,U+f000-U+f2e0,U+f300-U+f381,U+f400-U+f533,U+f0001-U+f1af0 Symbols Nerd Font Mono
 {{ else if eq .chezmoi.os "linux" }}
 symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b7,U+e700-U+e8ef,U+ed00-U+efc1,U+f000-U+f2ff,U+f000-U+f2e0,U+f300-U+f381,U+f400-U+f533,U+f0001-U+f1af0 Symbols Nerd Font Mono
 {{ end }}
@@ -55,10 +55,6 @@ symbol_map U+e000-U+e00a Symbols Nerd Font Mono
 # Codicons
 # symbol_map U+EA60-U+EC1E Symbols Nerd Font Mono
 symbol_map U+ea60-U+ebeb Symbols Nerd Font Mono
-{{ if eq .chezmoi.os "darwin" }}
-# Heavy Angle Brackets
-symbol_map U+e276c-U+2771 Symbols Nerd Font Mono
-{{ end }}
 # Box Drawing
 symbol_map U+2500-U+259f Symbols Nerd Font Mono
 # Some symbols not covered by Symbols Nerd Font Mono
