--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -5,6 +5,18 @@ export PATH=$HOME/bin:/usr/local/bin:$PATH
 export ZSH="${HOME}/.oh-my-zsh"
 
 source $ZSH/oh-my-zsh.sh
+
+# zsh plugins using antidate
+source $(brew --prefix antidote)/share/antidote/antidote.zsh
+antidote load ${ZDOTDIR:-$HOME}/.config/zsh_plugins.txt
+
+# load custom plugins
+plugins=(
+  rebar
+  redis-cli
+  zsh-syntax-highlighting
+)
+
 {{ if eq .chezmoi.os "linux" }}
 eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
 {{ else if eq .chezmoi.os "darwin" }}
@@ -13,74 +25,9 @@ export PATH="/opt/homebrew/bin:$PATH"
 # FZF setup
 source ~/.config/fzf/fzf.zsh
 
-# asdf setup
-source ~/.config/asdf/asdf_setup.zsh
-
-# obsidianmd-cli completions
-source ~/.config/completions/obsidianmd.zsh
-
 # Custom syntax highlighting must come before activating zsh-syntax-highlighting
 # source ~/.config/tokyonight/zsh-syntax-highlighting.zsh
 source ~/.config/catppuccin/zsh-syntax-highlighting/themes/catppuccin_macchiato-zsh-syntax-highlighting.zsh
-
-# Antigen plugins
-source $(brew --prefix)/share/antigen/antigen.zsh
-
-antigen use oh-my-zsh
-
-antigen bundle aliases
-antigen bundle atuinsh/atuin@main
-antigen bundle brew
-antigen bundle bundler
-antigen bundle command-not-found
-antigen bundle compleat
-antigen bundle containers
-antigen bundle copybuffer
-antigen bundle copyfile
-antigen bundle copypath
-antigen bundle cp
-antigen bundle docker
-antigen bundle dotenv
-antigen bundle eza-zsh
-antigen bundle fzf
-antigen bundle gh
-antigen bundle git
-antigen bundle gpg-agent
-antigen bundle kazhala/dotbare
-antigen bundle kitty
-antigen bundle npm
-antigen bundle pip
-antigen bundle podman
-antigen bundle rails
-antigen bundle rake-fast
-antigen bundle rake
-antigen bundle react-native
-antigen bundle rebar
-antigen bundle redxtech/zsh-kitty
-antigen bundle rsync
-antigen bundle ruby
-antigen bundle rust
-antigen bundle safe-paste
-antigen bundle ssh-agent
-antigen bundle ssh
-antigen bundle thefuck
-antigen bundle themes
-antigen bundle uv
-antigen bundle vi-mode
-
-# Load order matters; must be last
-antigen bundle zdharma-continuum/fast-syntax-highlighting
-antigen bundle zsh-users/zsh-autosuggestions
-antigen bundle marlonrichert/zsh-autocomplete@main
-# redis-cli plugin relies on homebrew completion.
-antigen bundle redis-cli
-{{ if eq .chezmoi.os "linux" }}
-antigen bundle ubuntu
-{{ else if eq .chezmoi.os "darwin" }}
-antigen bundle macos
-antigen bundle xcode
-{{ end }}
-antigen apply
 
 # oh-my-posh theme
 # tokyonight_moon
@@ -121,6 +68,13 @@ zstyle ':completion:*' completer _expand_alias _complete _complete:-fuzzy _corre
 # Case-sensitive completion must be off. _ and - will be interchangeable.
 HYPHEN_INSENSITIVE="true"
 
+# asdf setup
+source ~/.config/asdf/asdf_setup.zsh
+
+# obsidianmd-cli completions
+source ~/.config/completions/obsidianmd.zsh
+
+
 # User configuration
 
 # You may need to manually set your language environment
@@ -156,6 +110,12 @@ export PATH="/usr/local/sbin:$PATH"
 export XDG_CONFIG_HOME="${HOME}/.config"
 export YAMLLINT_CONFIG_FILE="${XDG_CONFIG_HOME}/yamllint/config.yml"
 export PRETTIERD_DEFAULT_CONFIG="~/.config/prettier/prettier.config.js"
+
+# set brew installed curl if installed
+if brew list curl &>/dev/null; then 
+  export PATH="$(brew --prefix curl)/bin:$PATH"
+  export HOMEBREW_FORCE_BREWED_CURL=1
+fi
 
 # vivid/colorls setup
 export LS_COLORS="$(vivid generate catppuccin-macchiato)"
@@ -201,9 +161,6 @@ zstyle ':omz:plugins:alias-finder' autoload yes # disabled by default
 
 alias spectral='spectral-language-server'
 
-# kitty completeions
-__kitty_complete
-
 # use bat as a colorizing pager for man
 export MANPAGER="sh -c 'col -bx | bat -l man -p'"
 # Uncomment below if you experience formatting problems
@@ -222,15 +179,19 @@ eval "$(zoxide init zsh)"
 # Bun
 export PATH="${HOME}/.bun/bin:$PATH"
 
-# AWS Completions
-{{ if eq .chezmoi.os "darwin" }}
-source "/usr/local/bin/aws_zsh_completer.sh"
-{{ else }}
-autoload -Uz compinit && compinit
-if command -v aws_completer >/dev/null 2>&1; then
-    complete -C aws_completer aws
-fi
-{{ end }}
+# # AWS Completions (the aws plugin may render this redundant)
+# {{ if (and (eq .chezmoi.os "darwin") (not .work_computer)) -}}
+# source "/usr/local/bin/aws_zsh_completer.sh"
+# {{ else }}
+# autoload -Uz compinit && compinit
+# if command -v aws_completer >/dev/null 2>&1; then
+#     complete -C aws_completer aws
+# fi
+# {{ end }}
 
 # Enable vi mode
 bindkey -v
+
+{{ if .work_computer -}}
+export AWS_PROFILE='spreetail-dev'
+{{- end }}
