Completion allows arrow key selection.

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -59,7 +59,7 @@ export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
 source $(brew --prefix zsh-autocomplete)/share/zsh-autocomplete/zsh-autocomplete.plugin.zsh
 
 # zsh-autocomplete config, Leave out _expand
-zstyle ':completion:*' completer _expand_alias _complete _complete:-fuzzy _correct _approximate _ignored
+zstyle ':completion:*' completer _expand_alias _complete _complete:-fuzzy _correct _approximate _ignored menu select
 
 # Uncomment the following line to use case-sensitive completion.
 # CASE_SENSITIVE="true"
